# ragyphi

./: .gitignore  README.md  environment.yml  pyproject.toml  ragyphi.py  test.ipynb
data/text/: APEMC2025_Final_2025-01-07_1_context.md  APEMC2025_Final_2025-01-07_1_text.txt
ragyphi/: __init__.py  _prompt_template.py  _types.py  contextualizer.py  data_extractor.py  data_utils.py  image_extractor.py  ollama_chat.py  pdf_extractor.py  prompt_template.py  ragyphi.py
